2011.028:
	- Add error checking to fread() used to skip format ID character.

2010.029: 1.5
	- Update to libmseed 2.4, including fixes for packing long
	segments of data.

2008.220: 1.4
	- Update to libmseed 2.1.6, including much improved Steim 1
        and 2 encoding performance.

2007.284: 1.3
	- Update to libmseed 2.1.4.
	- Change src/Makefile so user defined CFLAGS are used if set.

2006.208: 1.2
	- Update to libmseed 1.8.
	- Fix small, inconsequential memory leak.

2006.183: 1.1
	- Update to libmseed 1.7.

2006.034: 1.0
	- Bump version 1.0, no code changes.

2005.336: 0.9
	- Update to libmseed 1.4.5.
	- Fix reading of 16-bit (2 byte) integer samples.

2005.329: 0.8.2
	- Update to libmseed 1.4.4.
	- Add explicit text to man page and help message about
	'filenr.lis' being a special case list file.
	- List file parsing now assumes that the last, space
	separated field on each line is the filename; accomodates
	simple list files and various dirf (filenr.lis) formats.

2005.315: 0.8.1
	- Update to libmseed 1.4.3 which has a WIN32 define for 
	strcasecmp().

2005.314: 0.8
	- If the 3rd component character is not a space put it in the
	first character of the location code, default location code is
	now '00'.
	- 'filenr.lis' is now recognized as a list file.
	- Output file name now adds '_MSEED' unless it's a standard
	SeisAn file in which case the 'S' at character 19 is changed to
	an 'M'.
	- Upate to libmseed 1.4.2.
	- Update documentation, components with spaces must be quoted.

2005.280: 0.7
	- Add support for 16-bit (2 byte) integer samples.
	- Move input file format detection out of main loop and before
	creation of the output file.  If a SeisAn format cannot be
	detected the output will not be created.

2005.279: 0.6b
	- Read list files after done parsing all command line options,
	the desired verbosity is then used, etc.

2005.279: 0.6
	- The default output files are now the input file names with
	".mseed" suffix.

2005.278: 0.5