@@ -1,5 +1,6 @@
 2011.028:
 	- Add error checking to fread() used to skip format ID character.
+	- Add diagnostic message to print SeisAn component and SEED channel.
 
 2010.029: 1.5
 	- Update to libmseed 2.4, including fixes for packing long
